--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <h1>Hori<span>seo</span>n</h1>
-        <nav class="nav">
+        <nav id="nav">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -30,7 +30,7 @@
 
     <main class="content">
         <div class="seo">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" id="search-engine-optimization" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" id="search-engine-optimization" alt="Search Engine Optimization Image" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -39,7 +39,7 @@
             </p>
         </div>
         <div class="orm">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" id="online-reputation-management" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" id="online-reputation-management" alt="Online Reputation Management Image" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -48,7 +48,7 @@
             </p>
         </div>
         <div class="smm">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" id="social-media-marketing" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" id="social-media-marketing" alt="Social Media Marketing Image" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -60,7 +60,7 @@
 
     <section class="benefits">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
 
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
@@ -68,7 +68,7 @@
             </p>
 
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
 
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
@@ -76,7 +76,7 @@
             </p>
 
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Cost Management Icon"></img>
 
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
