--- a/index.html
+++ b/index.html
@@ -29,63 +29,66 @@
     <div class="hero"></div>
 
     <main class="content">
-        <div class="seo">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" id="search-engine-optimization" alt="Search Engine Optimization Image" />
+        <section class="block">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" id="search-engine-optimization"
+                alt="Search Engine Optimization Image" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
                 your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div class="orm">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" id="online-reputation-management" alt="Online Reputation Management Image" />
+        </section>
+        <section class="block">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right"
+                id="online-reputation-management" alt="Online Reputation Management Image" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
                 internet connection to say whatever they want about your business. Online Reputation Management gives
                 you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div class="smm">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" id="social-media-marketing" alt="Social Media Marketing Image" />
+        </section>
+        <section class="block">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" id="social-media-marketing"
+                alt="Social Media Marketing Image" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
                 determine which platforms are suited to your brand, using analytics to find the right markets and
                 increase your lead generation.
             </p>
-        </div>
+        </section>
     </main>
 
-    <section class="benefits">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
+    <aside class="benefits">
+        <h3>Lead Generation</h3>
+        <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
 
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly
-                to your website.
-            </p>
+        <p>
+            Inbound strategies for lead generation require less work for your business, bringing customers directly
+            to your website.
+        </p>
 
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
+        <h3>Brand Awareness</h3>
+        <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
 
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility
-                for your business.
-            </p>
+        <p>
+            Users find your business through paid and organic searches, increasing the search ranking and visibility
+            for your business.
+        </p>
 
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Cost Management Icon"></img>
+        <h3>Cost Management</h3>
+        <img src="./assets/images/cost-management.png" alt="Cost Management Icon"></img>
 
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer
-                need to advertise your page.
-            </p>
+        <p>
+            As the search ranking for your business increases, your advertising costs decrease, and you no longer
+            need to advertise your page.
+        </p>
 
-    </section>
+    </aside>
 
-    <footer class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
