--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <h1>Hori<span>seo</span>n</h1>
-        <nav id="nav">
+        <nav class="nav">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -62,28 +62,24 @@
     </main>
 
     <aside class="benefits">
-
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
        <p>
             Inbound strategies for lead generation require less work for your business, bringing customers directly
             to your website.
         </p>
-
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
         <p>
             Users find your business through paid and organic searches, increasing the search ranking and visibility
             for your business.
         </p>
-
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" alt="Cost Management Icon"></img>
         <p>
             As the search ranking for your business increases, your advertising costs decrease, and you no longer
             need to advertise your page.
         </p>
-
     </aside>
 
     <footer>
